feat(compose): 添加compose和makefile
